<resources>
    <string name="app_name">Adlam</string>
    <string name="menu">menu</string>

    <!-- Screen titles -->
    <string name="welcome_screen">Welcome screen</string>
    <string name="exercise_sessions">Exercise sessions</string>
    <string name="exercise_session_detail">Exercise session detail</string>
...
    <string name="sleep_session_detail">Sleep session detail</string>
    <string name="differential_changes">Changes</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="input_readings">Record weight</string>


    <string name="alphabet">Alphabet</string>
    <string name="writing">Writing</string>
    <string name="Exercises">Exercises</string>
    <string name="alphabet_learning">Alphabet</string>
    <string name="numbers">Numbers</string>
    <string name="quiz">Quiz</string>
    <string name="the_syllables">The syllables</string>
...
COMPLETE and learn all adlam syllables</string>
    <string name="wrinting" translatable="false">Wrinting</string>
    <string name="reading">Reading</string>
    <string name="current_consonant">Consonant</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="consonne">Consonne: %1$s</string>
    <string name="the_alphabet">THE ALPHABET</string>
    <string name="trace_and_learn_all_adlam_letters">Trace and learn all adlam letters</string>
    <string name="lower_case">Lower Case</string>
    <string name="upper_case">Upper Case</string>
    <string name="setting">Setting</string>
...
    <string name="letter_details">Letter Details</string>
    <string name="examples">Examples</string>
    <string name="numbers_in_adlam">Numbers in Adlam</string>
    <string name="pause">Pause</string>
    <string name="play">Play</string>
    <string name="stop">Stop</string>
    <string name="settings">Settings</string>
    <string name="adlam_letter">Adlam Letter</string>
    <string name="brush_settings_title">Brush Settings</string>
    <string name="brush_size">Brush Size: %1$d px</string>
    <string name="brush_color">Brush Color</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
...
    <string name="select_theme">Sélectionner un thème</string>
    <string name="select_color_theme">Sélectionner un thème de couleur</string>
    <string name="close">Fermer</string>

    <string name="learn_adlam_script_ease">Learn Adlam Script with Ease</string>
    <string name="learn_adlam_script_ease_short">Learn Adlam Script</string>
    <string name="start_adlam_journey_title">Start Your Adlam Journey</string>
    <string name="start_adlam_journey_description">Master the Adlam script with interactive lessons and practice</string>
    <string name="get_started">Get Started</string>
    <string name="learning_modules">Learning Modules</string>
    <string name="app_logo_description">App Logo</string>
    <string name="featured_image_desc">Featured content image</string>
    <string name="menu_icon_desc">Menu Icon</string>

    <string name="privacy_policy_url">https://adlamfulfulde-8a54a.web.app/privacy/privacy.html</string>
    <string name="share_app_text">Check out this amazing Adlam Fulfulde learning app: https://play.google.com/store/apps/details?id=%1s</string>
    <string name="version">Version %1s</string>
    <string name="rate_app">Rate this App</string>
    <string name="more_options">More options</string>
...
    <string name="export_progress_desc">Save and share your learning data.</string>

    <string name="adlam_transcription">Adlam Latin Transcription</string>
    <string name="adlam_transcription_subtitle">Transcribe Adlam to Latin script</string>

    <!-- Alphabet Learning Quiz -->
    <string name="alphabet_quiz_title">Alphabet Quiz</string>
    <string name="alphabet_quiz_subtitle">Learn each letter step by step</string>
    <string name="visual_recognition_phase">Visual Recognition</string>
    <string name="audio_recognition_phase">Audio Recognition</string>
    <string name="question_prompt">What is the name of this letter?</string>
    <string name="audio_question_prompt">Listen to the sound and choose the corresponding letter</string>
    <string name="mastery_required">Master this letter to continue</string>
...
