...
    closeDrawer: () -> Unit,
    onNavigation: (MenuItem) -> Unit
) {
    ModalDrawerSheet {
        // En-tête du tiroir
        Text(
            text = "Adlam Fulfulde",
            style = MaterialTheme.typography.headlineSmall,
            modifier = Modifier.padding(16.dp)
        )
        HorizontalDivider()

        // Éléments du menu
...
